--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#Unused js & asset files
+assets/fonts/CutiveMono-Regular.ttf
+assets/img/audio
+
 # OSX
 #
 .DS_Store
@@ -29,6 +33,7 @@ build/
 .gradle
 local.properties
 *.iml
+*.jks
 
 # node.js
 #
