--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -111,6 +111,18 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+
+    signingConfigs {
+        release {
+           if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+                storeFile file(MYAPP_RELEASE_STORE_FILE)
+                storePassword MYAPP_RELEASE_STORE_PASSWORD
+                keyAlias MYAPP_RELEASE_KEY_ALIAS
+                keyPassword MYAPP_RELEASE_KEY_PASSWORD
+            }
+        }
+    }
+
     splits {
         abi {
             reset()
@@ -123,6 +135,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
@@ -148,6 +161,9 @@ dependencies {
     compile project(':react-native-spinkit')  //Lib for RN Loading Indicator 
     compile project(':react-native-vector-icons') //Lib for RN Icons
     compile project(':react-native-navigation') // Lib for RN Native Navigation
+    compile project(':react-native-audio') //Lib for RN Audio Recording
+    compile project(':react-native-sound') //lib for RN Audio playback
+    compile project(':react-native-fs') //Lib for RN FileSystem
 }
 
 // Run this once to be able to run the application with BUCK
