--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=aflsops.jks
+MYAPP_RELEASE_KEY_ALIAS=aflsops
+MYAPP_RELEASE_STORE_PASSWORD=aflsops
+MYAPP_RELEASE_KEY_PASSWORD=aflsops
+
