--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,8 +17,9 @@ allprojects {
     repositories {
         mavenLocal()
         jcenter()
-        maven {                                                                                                             
-           url "https://jitpack.io"                                                                                       
+        google()
+        maven {                                                                                     
+           url "https://jitpack.io"                                                                 
         }   
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
@@ -25,3 +27,43 @@ allprojects {
         }
     }
 }
+
+/**
+ * Project-wide gradle configuration properties for use by all modules (currently picked up only by react-native-camera)
+ */
+ext {
+    compileSdkVersion           = 27
+    targetSdkVersion            = 27
+    buildToolsVersion           = "27.0.3"
+    googlePlayServicesVersion   = "15.0.2"
+    supportLibVersion           = "27.1.1"
+}
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '27.1.1'
+            }
+        }
+    }
+}
+
+
+//ext {
+//    compileSdkVersion = 26
+//    buildToolsVersion = '26.0.2'
+//}
+//
+//subprojects { subproject ->
+//    afterEvaluate{
+//        if((subproject.plugins.hasPlugin('android') || subproject.plugins.hasPlugin('android-library'))) {
+//            android {
+//                compileSdkVersion rootProject.ext.compileSdkVersion
+//                buildToolsVersion rootProject.ext.buildToolsVersion
+//            }
+//        }
+//    }
+//}
+
