--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "moment": "2.11.2",
     "native-base": "^2.3.10",
     "react": "16.2.0",
-    "react-native": "^0.54.2",
+    "react-native": "^0.55.4",
     "react-native-animatable": "^1.2.4",
     "react-native-audio": "^4.0.0",
     "react-native-autocomplete-input": "^3.5.0",
@@ -39,7 +39,7 @@
     "react-native-spinkit": "^1.1.1",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "1.5.0",
-    "moment": "2.11.2"
+    "react-native-camera": "1.1.2"
   },
   "devDependencies": {
     "babel-eslint": "8.1.0",
