1. Chatbot Template Blob for availability/Booking/Status created. 2.Dedicated Splash Screen added for Chatbot. 3. Several Bug fixes, and UI corrections done w.r.t to chatBot

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,6 +19,8 @@
 
 android.enableAapt2=false
 android.useDeprecatedNdk=true
+org.gradle.jvmargs=-Xmx2048m
+
 MYAPP_RELEASE_STORE_FILE=aflsops.jks
 MYAPP_RELEASE_KEY_ALIAS=aflsops
 MYAPP_RELEASE_STORE_PASSWORD=aflsops
